 * TwitVideoへの動画アップロードに対応
 * ファイルをドラッグ＆ドロップした際の判定を強化しファイルサイズオーバーの画像または動画の場合は対応サービスに自動切り替えするようにした
 * 詳細表示でCtrl+Insertキーでもコピーができるようにした
 * 画像投稿モードで使用する画像リソースを差し替えた また、動画をドラッグした場合は専用の画像を表示するようにした(thx @pureminami)
 * 読み上げソフトで問題が出ないように調整を行った
 * 画像投稿モードでファイルを設定した際にファイルサイズチェックを行うようにした
 * 画像投稿モードで無効なファイル形式を設定した場合にファイル名がクリアされない場合があるバグを修正
 * 自プロフィール簡易表示の場合でもプロフィール画面を表示するようにした。従来通り書き込みの際に返された情報を使うのでAPIは消費しない
==== Ver 0.9.4.0(2010/07/15)
 * 認証完了後、自分の発言が片思い表示になるバグ修正
 * ユーザー変更時にフォロワー情報を取得するよう変更
 * 振り分けルール画面でタブ名変更・削除をした場合、タブ選択画面に変更が反映されないバグ修正
 * 公式RTをコピーした時、正しくないURLがコピーされるバグ修正
 * 設定画面、メニューでのAPI情報取得処理を非同期化
 * その他機能よりAPIを使用するメニューを選択した場合、処理後にステータスバー表示を更新するよう変更
 * API関連情報（残数など）の精度向上
 * リストの発言取得で例外発生する不具合対応のため、詳細情報をログに出力するように（仮対処）
 * プロフィール画面でのアイコン画質向上
 * アイコン取得時に例外が発生することがあったので対応した
 * r.sm3.jpのリンクが壊れるバグ修正
 * bit.ly、j.mpで短縮した結果の判定で、短縮サービスと別名で短縮された場合も許可するよう変更（bit.ly->amzn.to対応）
 * 画像アップロードに対応
   * 対応しているサービスはTwitPic,TwitVideoです。
   * 画像ファイルのD&D、画面右下▽メニューから選択（Ctrl-Shift-P）で画像モードへ
   * Esc、Ctrl-Shift-Pで通常モードへ戻ります。
 * 振り分けルール画面でルール編集を行いOKを押して確定した場合に複数選択になってしまう場合があるのを修正
 * アップデータを管理権限に昇格させないように変更
 * 振り分けルール画面で、編集ボタンをクリックした際に複数選択を解除するよう変更
 * Twitter不具合で不正な通信ヘッダを受信した際、httpヘッダからのAPI情報取得時に例外エラーが起きないよう対処
==== Ver 0.9.3.0(2010/07/01)
 * in_reply_to_status_idの付いた発言で、reply元の発言をキーで追いかけられるようにした。 [でreply元発言へジャンプ、]で元の書き込みへ戻る。(thx @__park)
 * 返信先を開く際、検索タブ、リストタブを考慮していなかったバグ修正
 * ホットキー機能追加。設定でキー設定。アイコン化と画面表示のトグル動作。画面表示する際は、入力欄にフォーカスします。
 * オフライン時にCPUを使っていた問題を修正
 * Fav/DM/PublicSearchの取得で、Twitterが指定件数より多く結果を返す不具合への対処
 * 400系エラー時は投稿リトライを行わないように変更
 * @あるいは#の入力後にCtrl+Shift+Spaceを押すことで補完ダイアログを呼び出せるようにした
 * STOTコピーの際にProtect発言が含まれていた場合ダイアログを出すようにした
 * 相互フォロー状態表示の際にID表示が正しくない場合があったのを修正
 * スペースキーを押したままにしてスペースの連続が入力された場合にも未読ジャンプするようにした（判定タイミングは従来の通りキー入力を止めたときです）
 * 投稿文内の全角スペースを半角スペースにする処理で、半角スペース2つから1つへの置換に変更
 * DM送信時にエラーチェックをしていなかったのを修正
 * 投稿内容が"."で始まっていた場合にin_reply_toを付加しないようにした。以前は". "（ドット＋スペース）で始まっていた場合のみin_reply_toを消していました。
 * htn.to,amzn.to,moi.stのURL展開に対応
 * タブ名入力ダイアログで正しくキャンセルできない場合があるバグを修正