@@ -32,6 +32,7 @@
  * 画像投稿モードでファイルを設定した際にファイルサイズチェックを行うようにした
  * 画像投稿モードで無効なファイル形式を設定した場合にファイル名がクリアされない場合があるバグを修正
  * 自プロフィール簡易表示の場合でもプロフィール画面を表示するようにした。従来通り書き込みの際に返された情報を使うのでAPIは消費しない
+ * Listsタブでin_reply_to追いかけを行った際に、reply先発言がRecent側で保持されていないとListsタブに存在してもWebを開いていたバグを修正
 ==== Ver 0.9.4.0(2010/07/15)
  * 認証完了後、自分の発言が片思い表示になるバグ修正
  * ユーザー変更時にフォロワー情報を取得するよう変更
